XMLExper/m12/m12_323_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::NextSiblingElement(const char*) const’:
tinyxml2.cpp:1063:96: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLDeclaration*’ (conversion casts away constness)
 1063 |     for( const XMLNode* node = _next; node; /*PCI*/dynamic_cast<tinyxml2::XMLDeclaration*>(node) = node->_next ) {
      |                                                                                                ^
diff: tinyxml2.S: No such file or directory
